--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://fly10zin.github.io/daniella",
+  "homepage": "https://fly10zin.github.io/daniella2",
   "name": "dear-daniella",
   "version": "0.1.0",
   "private": true,
